// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HttpValidator validateInput() all validations are turned off returns no validation errors 1`] = `Array []`;

exports[`HttpValidator validateInput() all validations are turned on returns validation errors for whole request structure 1`] = `
Array [
  Object {
    "message": "should be boolean",
    "name": "type",
    "path": Array [
      "body",
      "completed",
    ],
    "severity": "error",
    "summary": "should be boolean",
  },
  Object {
    "message": "should match format \\"date-time\\"",
    "name": "format",
    "path": Array [
      "header",
    ],
    "severity": "error",
    "summary": "should match format \\"date-time\\"",
  },
  Object {
    "message": "should match pattern \\"^(yes|no)$\\"",
    "name": "pattern",
    "path": Array [
      "query",
    ],
    "severity": "error",
    "summary": "should match pattern \\"^(yes|no)$\\"",
  },
]
`;

exports[`HttpValidator validateInput() only body validation is turned on returns only body validation errors 1`] = `
Array [
  Object {
    "message": "should be boolean",
    "name": "type",
    "path": Array [
      "body",
      "completed",
    ],
    "severity": "error",
    "summary": "should be boolean",
  },
]
`;

exports[`HttpValidator validateInput() only headers validation is turned on returns only headers validation errors 1`] = `
Array [
  Object {
    "message": "should match format \\"date-time\\"",
    "name": "format",
    "path": Array [
      "header",
    ],
    "severity": "error",
    "summary": "should match format \\"date-time\\"",
  },
]
`;

exports[`HttpValidator validateInput() only query validation is turned on returns only query validation errors 1`] = `
Array [
  Object {
    "message": "should match pattern \\"^(yes|no)$\\"",
    "name": "pattern",
    "path": Array [
      "query",
    ],
    "severity": "error",
    "summary": "should match pattern \\"^(yes|no)$\\"",
  },
]
`;

exports[`HttpValidator validateOutput() all validations are turned off returns no validation errors 1`] = `Array []`;

exports[`HttpValidator validateOutput() all validations are turned on returns validation errors for whole request structure 1`] = `
Array [
  Object {
    "message": "should be boolean",
    "name": "type",
    "path": Array [
      "body",
      "completed",
    ],
    "severity": "error",
    "summary": "should be boolean",
  },
  Object {
    "message": "should match format \\"date-time\\"",
    "name": "format",
    "path": Array [
      "header",
    ],
    "severity": "error",
    "summary": "should match format \\"date-time\\"",
  },
]
`;

exports[`HttpValidator validateOutput() only body validation is turned on returns only body validation errors 1`] = `
Array [
  Object {
    "message": "should be boolean",
    "name": "type",
    "path": Array [
      "body",
      "completed",
    ],
    "severity": "error",
    "summary": "should be boolean",
  },
]
`;

exports[`HttpValidator validateOutput() only headers validation is turned on returns only headers validation errors 1`] = `
Array [
  Object {
    "message": "should match format \\"date-time\\"",
    "name": "format",
    "path": Array [
      "header",
    ],
    "severity": "error",
    "summary": "should match format \\"date-time\\"",
  },
]
`;
